--- a/index.html
+++ b/index.html
@@ -205,5 +205,56 @@
   });
 </script>
 
+  <script>
+  const trackBtn = document.getElementById("trackBtn");
+  const trackingInput = document.getElementById("trackingInput");
+  const resultDiv = document.getElementById("result");
+
+  trackBtn.addEventListener("click", async () => {
+    const tracking = trackingInput.value.trim();
+
+    resultDiv.innerHTML = "";
+
+    if (!tracking) {
+      resultDiv.innerHTML = "<p>Please enter a tracking number.</p>";
+      return;
+    }
+
+    resultDiv.innerHTML = "<p>Tracking shipment…</p>";
+
+    try {
+      const response = await fetch(
+        "https://api.transportal.gr/webhook/track-mvp",
+        {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({ tracking }),
+        }
+      );
+
+      if (!response.ok) {
+        throw new Error("Tracking service unavailable");
+      }
+
+      const data = await response.json();
+
+      // Basic render (MVP)
+      resultDiv.innerHTML = `
+        <h3>Status</h3>
+        <p><strong>${data.status ?? "Unknown"}</strong></p>
+
+        <p>Carrier: ${data.carrier ?? "Unknown"}</p>
+        <p>Source: ${data.source ?? "n/a"}</p>
+      `;
+    } catch (err) {
+      console.error(err);
+      resultDiv.innerHTML =
+        "<p>Unable to retrieve tracking information. Please try again later.</p>";
+    }
+  });
+</script>
+  
 </body>
 </html>
