--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
     <div class="card">
       <label for="tracking">Tracking number</label>
       <input
-        id="tracking"
+        id="trackingInput"
         type="text"
         placeholder="e.g. RR123456789GR"
         autocomplete="off"
-      />
+    />
 
       <button id="trackBtn">Track shipment</button>
 
