--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         autocomplete="off"
     />
 
-      <button id="trackBtn">Track shipment</button>
+      <button id="trackBtn" class="primary">Track shipment</button>
 
       <div id="error" class="error" style="display:none;"></div>
 
