--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Track your shipment | TransPortal</title>
+  <title>Track your shipment | transportal</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <style>
@@ -12,11 +12,10 @@
       --card: #ffffff;
       --text: #1f2937;
       --muted: #6b7280;
+      --error: #b91c1c;
     }
 
-    * {
-      box-sizing: border-box;
-    }
+    * { box-sizing: border-box; }
 
     body {
       margin: 0;
@@ -86,11 +85,12 @@
 
     .status {
       font-weight: 700;
-      margin-bottom: 8px;
+      margin-bottom: 4px;
     }
 
     .muted {
       color: var(--muted);
+      font-size: 14px;
     }
 
     .event {
@@ -100,15 +100,20 @@
     }
 
     .error {
-      color: #b91c1c;
+      color: var(--error);
       font-weight: 600;
       margin-top: 16px;
     }
 
+    footer {
+      margin-top: 48px;
+      text-align: center;
+      color: var(--muted);
+      font-size: 14px;
+    }
+
     @media (max-width: 480px) {
-      h1 {
-        font-size: 24px;
-      }
+      h1 { font-size: 24px; }
     }
   </style>
 </head>
@@ -121,40 +126,46 @@
     </p>
 
     <div class="card">
-      <label for="tracking">Tracking number</label>
+      <label for="trackingInput">Tracking number</label>
       <input
         id="trackingInput"
         type="text"
         placeholder="e.g. RR123456789GR"
         autocomplete="off"
-    />
+      />
 
-      <button id="trackBtn" class="primary">Track shipment</button>
+      <button id="trackBtn">Track shipment</button>
 
       <div id="error" class="error" style="display:none;"></div>
 
       <div id="result" class="result" style="display:none;">
         <div class="status" id="status"></div>
-        <div class="muted" id="carrier"></div>
+        <div class="muted" id="courier"></div>
 
         <div id="events" style="margin-top:16px;"></div>
       </div>
     </div>
+
+    <footer>
+      © 2026 transportal.gr — All rights reserved
+    </footer>
   </div>
 
 <script>
-  const btn = document.getElementById('trackBtn');
-  const input = document.getElementById('tracking');
-  const result = document.getElementById('result');
+  const trackBtn = document.getElementById('trackBtn');
+  const trackingInput = document.getElementById('trackingInput');
+  const resultEl = document.getElementById('result');
   const statusEl = document.getElementById('status');
-  const carrierEl = document.getElementById('carrier');
+  const courierEl = document.getElementById('courier');
   const eventsEl = document.getElementById('events');
   const errorEl = document.getElementById('error');
 
-  btn.addEventListener('click', async () => {
-    const tracking = input.value.trim();
+  trackBtn.addEventListener('click', async () => {
+    const tracking = trackingInput.value.trim();
+
     errorEl.style.display = 'none';
-    result.style.display = 'none';
+    resultEl.style.display = 'none';
+    eventsEl.innerHTML = '';
 
     if (!tracking) {
       errorEl.textContent = 'Please enter a tracking number.';
@@ -162,99 +173,53 @@
       return;
     }
 
-    btn.disabled = true;
-    btn.textContent = 'Tracking…';
+    trackBtn.disabled = true;
+    trackBtn.textContent = 'Tracking…';
 
     try {
-      const res = await fetch('https://track.transportal.gr/webhook/track-mvp', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ tracking })
-      });
+      const response = await fetch(
+        'https://track.transportal.gr/webhook/track-mvp',
+        {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ tracking })
+        }
+      );
 
-      const data = await res.json();
+      if (!response.ok) {
+        throw new Error('Tracking service unavailable');
+      }
 
-      statusEl.textContent = `Status: ${data.status || 'Unknown'}`;
-      carrierEl.textContent = `Carrier: ${data.carrier || 'Unknown'}`;
+      const data = await response.json();
 
-      eventsEl.innerHTML = '';
+      statusEl.textContent = `Status: ${data.status ?? 'Unknown'}`;
+      courierEl.textContent = `Courier: ${data.carrier ?? 'Unknown'}`;
 
       if (Array.isArray(data.events) && data.events.length > 0) {
         data.events.forEach(e => {
           const div = document.createElement('div');
           div.className = 'event';
           div.innerHTML = `
-            <div><strong>${e.status || 'Update'}</strong></div>
-            <div class="muted">${e.datetime || ''} ${e.location || ''}</div>
+            <div><strong>${e.status ?? 'Update'}</strong></div>
+            <div class="muted">${e.datetime ?? ''} ${e.location ?? ''}</div>
           `;
           eventsEl.appendChild(div);
         });
       } else {
-        eventsEl.innerHTML = `<div class="muted">No tracking events yet.</div>`;
+        eventsEl.innerHTML = '<div class="muted">No tracking events available yet.</div>';
       }
 
-      result.style.display = 'block';
+      resultEl.style.display = 'block';
 
     } catch (err) {
-      errorEl.textContent = 'Failed to retrieve tracking information.';
+      errorEl.textContent = 'Unable to retrieve tracking information. Please try again later.';
       errorEl.style.display = 'block';
     } finally {
-      btn.disabled = false;
-      btn.textContent = 'Track shipment';
+      trackBtn.disabled = false;
+      trackBtn.textContent = 'Track shipment';
     }
   });
 </script>
 
-  <script>
-  const trackBtn = document.getElementById("trackBtn");
-  const trackingInput = document.getElementById("trackingInput");
-  const resultDiv = document.getElementById("result");
-
-  trackBtn.addEventListener("click", async () => {
-    const tracking = trackingInput.value.trim();
-
-    resultDiv.innerHTML = "";
-
-    if (!tracking) {
-      resultDiv.innerHTML = "<p>Please enter a tracking number.</p>";
-      return;
-    }
-
-    resultDiv.innerHTML = "<p>Tracking shipment…</p>";
-
-    try {
-      const response = await fetch(
-        "https://api.transportal.gr/webhook/track-mvp",
-        {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-          },
-          body: JSON.stringify({ tracking }),
-        }
-      );
-
-      if (!response.ok) {
-        throw new Error("Tracking service unavailable");
-      }
-
-      const data = await response.json();
-
-      // Basic render (MVP)
-      resultDiv.innerHTML = `
-        <h3>Status</h3>
-        <p><strong>${data.status ?? "Unknown"}</strong></p>
-
-        <p>Carrier: ${data.carrier ?? "Unknown"}</p>
-        <p>Source: ${data.source ?? "n/a"}</p>
-      `;
-    } catch (err) {
-      console.error(err);
-      resultDiv.innerHTML =
-        "<p>Unable to retrieve tracking information. Please try again later.</p>";
-    }
-  });
-</script>
-  
 </body>
 </html>
