--- a/index.html
+++ b/index.html
@@ -194,7 +194,9 @@
     const tracking = trackingInput.value.trim();
     const carrier = carrierSelect.value;
 
+    // reset UI
     errorEl.style.display = 'none';
+    errorEl.textContent = '';
     resultEl.style.display = 'none';
     eventsEl.innerHTML = '';
 
@@ -218,22 +220,29 @@
       );
 
       if (!response.ok) {
-        throw new Error('API error');
+        throw new Error(`HTTP ${response.status}`);
       }
 
-      const raw = await response.json();
+      // ✅ SAFE JSON PARSE
+      const text = await response.text();
+      if (!text) {
+        throw new Error('Empty response body');
+      }
+
+      const raw = JSON.parse(text);
       const data = Array.isArray(raw) ? raw[0] : raw;
-      
+
       // ----------------------------------
-      // Show backend warning (carrier mismatch)
+      // Show backend warning (soft error)
       // ----------------------------------
       if (typeof data.error === 'string' && data.error.length > 0) {
-      errorEl.textContent = data.error;
-      errorEl.style.display = 'block';
-      } else {
-      errorEl.style.display = 'none';
+        errorEl.textContent = data.error;
+        errorEl.style.display = 'block';
       }
-      
+
+      // ----------------------------------
+      // Render result
+      // ----------------------------------
       statusEl.textContent = `Status: ${data.status || 'Unknown'}`;
 
       courierEl.textContent =
@@ -249,7 +258,10 @@
           div.className = 'event';
           div.innerHTML = `
             <div><strong>${e.status || 'Update'}</strong></div>
-            <div class="muted">${e.datetime || ''} ${e.location || ''}</div>
+            <div class="muted">
+              ${e.datetime || ''} ${e.location || ''}<br/>
+              ${e.description || ''}
+            </div>
           `;
           eventsEl.appendChild(div);
         });
@@ -264,7 +276,7 @@
       resultEl.style.display = 'block';
 
     } catch (err) {
-      console.error(err);
+      console.error('Tracking UI error:', err);
       errorEl.textContent =
         'Unable to retrieve tracking information. Please try again later.';
       errorEl.style.display = 'block';
