--- a/index.html
+++ b/index.html
@@ -119,201 +119,136 @@
       color: var(--muted);
       font-size: 14px;
     }
-
-    @media (max-width: 480px) {
-      h1 { font-size: 24px; }
-    }
   </style>
 </head>
 <body>
 
-  <div class="container">
-    <h1>📦 Track your shipment</h1>
-    <p class="subtitle">
-      Enter your tracking number.  
-      If you know the carrier, selecting it may improve accuracy.
-    </p>
+<div class="container">
+  <h1>📦 Track your shipment</h1>
+  <p class="subtitle">
+    Enter your tracking number.
+    If you know the carrier, selecting it may improve accuracy.
+  </p>
 
-    <div class="card">
-      <label for="trackingInput">Tracking number</label>
-      <input
-        id="trackingInput"
-        type="text"
-        placeholder="e.g. RR123456789GR"
-        autocomplete="off"
-      />
+  <div class="card">
+    <label>Tracking number</label>
+    <input id="trackingInput" />
 
-      <label for="carrierSelect">Carrier (optional)</label>
-      <select id="carrierSelect">
-        <option value="AUTO" selected>Auto (recommended)</option>
+    <label>Carrier (optional)</label>
+    <select id="carrierSelect">
+      <option value="AUTO">Auto (recommended)</option>
+      <option value="UPS">UPS</option>
+      <option value="DHL">DHL</option>
+      <option value="FEDEX">FedEx</option>
+      <option value="ELTA">ELTA</option>
+      <option value="ACS">ACS</option>
+    </select>
 
-        <!-- International -->
-        <option value="UPS">UPS</option>
-        <option value="DHL">DHL</option>
-        <option value="FEDEX">FedEx</option>
+    <button id="trackBtn">Track shipment</button>
 
-        <!-- Greece -->
-        <option value="ELTA">ELTA</option>
-        <option value="ACS">ACS</option>
-        <option value="GENIKI">Geniki Taxydromiki</option>
-        <option value="SPEEDEX">Speedex</option>
-        <option value="COURIER_CENTER">Courier Center</option>
-      </select>
+    <div id="error" class="error" style="display:none;"></div>
 
-      <div class="helper">
-        Leave on Auto unless you are sure about the courier.
-      </div>
-
-      <button id="trackBtn">Track shipment</button>
-
-      <div id="error" class="error" style="display:none;"></div>
-
-      <div id="result" class="result" style="display:none;">
-        <div class="status" id="status"></div>
-        <div class="muted" id="courier"></div>
-        <div id="events" style="margin-top:16px;"></div>
-      </div>
+    <div id="result" class="result" style="display:none;">
+      <div id="status" class="status"></div>
+      <div id="courier" class="muted"></div>
+      <div id="events" style="margin-top:16px;"></div>
     </div>
-
-    <footer>
-      © 2026 transportal.gr — All rights reserved
-    </footer>
   </div>
+</div>
 
 <script>
-  const trackBtn = document.getElementById('trackBtn');
-  const trackingInput = document.getElementById('trackingInput');
-  const carrierSelect = document.getElementById('carrierSelect');
-  const resultEl = document.getElementById('result');
-  const statusEl = document.getElementById('status');
-  const courierEl = document.getElementById('courier');
-  const eventsEl = document.getElementById('events');
-  const errorEl = document.getElementById('error');
+const trackBtn = document.getElementById('trackBtn');
+const trackingInput = document.getElementById('trackingInput');
+const carrierSelect = document.getElementById('carrierSelect');
+const resultEl = document.getElementById('result');
+const statusEl = document.getElementById('status');
+const courierEl = document.getElementById('courier');
+const eventsEl = document.getElementById('events');
+const errorEl = document.getElementById('error');
 
-  trackBtn.addEventListener('click', async () => {
-    const tracking = trackingInput.value.trim();
-    const carrier = carrierSelect.value;
+trackBtn.addEventListener('click', async () => {
+  const tracking = trackingInput.value.trim();
+  const carrier = carrierSelect.value;
 
-    // Reset UI
-    errorEl.style.display = 'none';
-    errorEl.textContent = '';
-    resultEl.style.display = 'none';
-    eventsEl.innerHTML = '';
+  errorEl.style.display = 'none';
+  resultEl.style.display = 'none';
+  eventsEl.innerHTML = '';
 
-    if (!tracking) {
-      errorEl.textContent = 'Please enter a tracking number.';
-      errorEl.style.display = 'block';
-      return;
-    }
+  if (!tracking) {
+    errorEl.textContent = 'Please enter a tracking number.';
+    errorEl.style.display = 'block';
+    return;
+  }
 
-    trackBtn.disabled = true;
-    trackBtn.textContent = 'Tracking…';
+  trackBtn.disabled = true;
+  trackBtn.textContent = 'Tracking…';
 
-    let response;
-
-    // 1) Network call (only network errors here)
-    try {
-      response = await fetch('https://api.transportal.gr/webhook/track-mvp', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ tracking, carrier }),
-      });
-    } catch (err) {
-      console.error('Network error:', err);
-      errorEl.textContent =
-        'Unable to reach tracking service. Please try again later.';
-      errorEl.style.display = 'block';
-      trackBtn.disabled = false;
-      trackBtn.textContent = 'Track shipment';
-      return;
-    }
-
-    // 2) HTTP status check
-    if (!response.ok) {
-      console.error('HTTP error:', response.status);
-      errorEl.textContent =
-        'Unable to retrieve tracking information. Please try again later.';
-      errorEl.style.display = 'block';
-      trackBtn.disabled = false;
-      trackBtn.textContent = 'Track shipment';
-      return;
-    }
-
-    // 3) Safe parse (handles empty/truncated/non-JSON bodies)
-    let data;
-    try {
-      const text = await response.text();
-
-      if (!text || !text.trim()) {
-      console.warn('Empty response body (ignored)');
-      trackBtn.disabled = false;
-      trackBtn.textContent = 'Track shipment';
-      return;
-    }
-      }
-
-      let raw;
-      try {
-        raw = JSON.parse(text);
-      } catch (e) {
-        console.error('Non-JSON response body:', text);
-        throw new Error('Invalid JSON response');
-      }
-
-      data = Array.isArray(raw) ? raw[0] : raw;
-    } catch (err) {
-      console.error('Tracking UI parse error:', err);
-      errorEl.textContent =
-        'Tracking information is temporarily unavailable. Please try again.';
-      errorEl.style.display = 'block';
-      trackBtn.disabled = false;
-      trackBtn.textContent = 'Track shipment';
-      return;
-    }
-
-    // 4) Render backend warning (soft warning)
-    if (typeof data.error === 'string' && data.error.length > 0) {
-      errorEl.textContent = data.error;
-      errorEl.style.display = 'block';
-    }
-
-    // 5) Render result
-    statusEl.textContent = `Status: ${data.status || 'Unknown'}`;
-
-    courierEl.textContent =
-      `Carrier: ${
-        data.carrier && data.carrier !== 'UNKNOWN'
-          ? data.carrier
-          : 'Not detected yet'
-      }`;
-
-    if (Array.isArray(data.events) && data.events.length > 0) {
-      data.events.forEach(e => {
-        const div = document.createElement('div');
-        div.className = 'event';
-        div.innerHTML = `
-          <div><strong>${e.status || 'Update'}</strong></div>
-          <div class="muted">
-            ${e.datetime || ''} ${e.location || ''}<br />
-            ${e.description || ''}
-          </div>
-        `;
-        eventsEl.appendChild(div);
-      });
-    } else {
-      eventsEl.innerHTML = `
-        <div class="muted">
-          No tracking events available yet.<br />
-          Updates usually appear after the first courier scan.
-        </div>`;
-    }
-
-    resultEl.style.display = 'block';
-
-    // Done
+  let response;
+  try {
+    response = await fetch('https://api.transportal.gr/webhook/track-mvp', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ tracking, carrier }),
+    });
+  } catch (e) {
+    errorEl.textContent = 'Unable to reach tracking service.';
+    errorEl.style.display = 'block';
     trackBtn.disabled = false;
     trackBtn.textContent = 'Track shipment';
-  });
+    return;
+  }
+
+  if (!response.ok) {
+    errorEl.textContent = 'Unable to retrieve tracking information.';
+    errorEl.style.display = 'block';
+    trackBtn.disabled = false;
+    trackBtn.textContent = 'Track shipment';
+    return;
+  }
+
+  const text = await response.text();
+  if (!text || !text.trim()) {
+    // VALID: ignore empty body
+    trackBtn.disabled = false;
+    trackBtn.textContent = 'Track shipment';
+    return;
+  }
+
+  let data;
+  try {
+    const raw = JSON.parse(text);
+    data = Array.isArray(raw) ? raw[0] : raw;
+  } catch {
+    errorEl.textContent = 'Invalid response from server.';
+    errorEl.style.display = 'block';
+    trackBtn.disabled = false;
+    trackBtn.textContent = 'Track shipment';
+    return;
+  }
+
+  if (typeof data.error === 'string') {
+    errorEl.textContent = data.error;
+    errorEl.style.display = 'block';
+  }
+
+  statusEl.textContent = `Status: ${data.status || 'Unknown'}`;
+  courierEl.textContent = `Carrier: ${data.carrier || 'Unknown'}`;
+
+  if (Array.isArray(data.events) && data.events.length) {
+    data.events.forEach(e => {
+      const div = document.createElement('div');
+      div.className = 'event';
+      div.innerHTML = `<strong>${e.status}</strong><br>${e.description || ''}`;
+      eventsEl.appendChild(div);
+    });
+  } else {
+    eventsEl.innerHTML = `<div class="muted">No tracking events available yet.</div>`;
+  }
+
+  resultEl.style.display = 'block';
+  trackBtn.disabled = false;
+  trackBtn.textContent = 'Track shipment';
+});
 </script>
 
 </body>
