--- a/index.html
+++ b/index.html
@@ -159,7 +159,13 @@
     <!-- BATCH TRACKING -->
     <label>Batch upload (CSV or Excel)</label>
     <input id="batchFile" type="file" accept=".csv,.xlsx" />
-
+   
+    <label>Export format</label>
+    <select id="exportFormat">
+      <option value="csv">CSV</option>
+      <option value="xlsx">Excel (XLSX)</option>
+    </select>
+    
     <label>Export format</label>
     <select id="exportFormat">
       <option value="csv" selected>CSV</option>
