--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@ const trackingInput = document.getElementById('trackingInput');
 const carrierSelect = document.getElementById('carrierSelect');
 const batchFileInput = document.getElementById('batchFile');
 const exportFormatSelect = document.getElementById('exportFormat');
+const exportFormatSelect = document.getElementById('exportFormat');
 
 const errorEl = document.getElementById('error');
 
