--- a/index.html
+++ b/index.html
@@ -189,11 +189,11 @@
 </div>
 
 <script>
+c<script>
 const trackBtn = document.getElementById('trackBtn');
 const trackingInput = document.getElementById('trackingInput');
 const carrierSelect = document.getElementById('carrierSelect');
 const batchFileInput = document.getElementById('batchFile');
-const exportFormatSelect = document.getElementById('exportFormat');
 const exportFormatSelect = document.getElementById('exportFormat');
 
 const errorEl = document.getElementById('error');
