--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <style>
     :root {
       --primary: #3b5cff;
+      --violet: #6d28d9;
       --bg: #f5f7fb;
       --card: #ffffff;
       --text: #1f2937;
@@ -19,7 +20,8 @@
 
     body {
       margin: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+      font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+        "SF Pro Display", "Inter", "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
       background: var(--bg);
       color: var(--text);
     }
@@ -28,16 +30,20 @@
       max-width: 720px;
       margin: 0 auto;
       padding: 24px 16px 64px;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
     }
 
     h1 {
       font-size: 28px;
-      margin-bottom: 8px;
+      margin: 0 0 8px 0;
     }
 
     p.subtitle {
       color: var(--muted);
-      margin-bottom: 32px;
+      margin: 0;
     }
 
     .card {
@@ -67,7 +73,7 @@
       width: 100%;
       padding: 14px;
       font-size: 16px;
-      font-weight: 600;
+      font-weight: 700;
       background: var(--primary);
       color: white;
       border: none;
@@ -93,12 +99,31 @@
       margin-bottom: 16px;
     }
 
+    .toggleRow {
+      display: flex;
+      gap: 16px;
+      margin-bottom: 12px;
+    }
+
+    .toggleRow label {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      font-weight: 600;
+      color: var(--muted);
+      cursor: pointer;
+    }
+
+    .toggleRow input {
+      accent-color: var(--primary);
+    }
+
     .result {
-      margin-top: 32px;
+      margin-top: 24px;
     }
 
     .status {
-      font-weight: 700;
+      font-weight: 800;
       margin-bottom: 4px;
     }
 
@@ -120,25 +145,50 @@
     }
 
     hr {
-      margin: 32px 0;
+      margin: 28px 0;
       border: none;
       border-top: 1px solid #e5e7eb;
+    }
+
+    footer {
+      margin-top: auto;
+      text-align: center;
+      font-size: 15px;
+      color: var(--muted);
+    }
+
+    footer .brand {
+      color: var(--violet);
+      font-weight: 800;
     }
   </style>
 </head>
 <body>
 
 <div class="container">
-  <h1>📦 Track your shipment</h1>
-  <p class="subtitle">
-    Enter a tracking number or upload a file to track multiple shipments.
-  </p>
+  <div>
+    <h1>📦 Track your shipment</h1>
+    <p class="subtitle">
+      Track a single shipment or upload a file for batch tracking.
+    </p>
+  </div>
 
   <div class="card">
 
-    <!-- SINGLE TRACKING -->
-    <label>Tracking number</label>
-    <input id="trackingInput" placeholder="e.g. 1Z999AA10123456784" />
+    <!-- SINGLE MODE TOGGLE -->
+    <div class="toggleRow">
+      <label>
+        <input type="radio" name="singleMode" value="tracking" checked />
+        Tracking number
+      </label>
+      <label>
+        <input type="radio" name="singleMode" value="reference" />
+        Reference
+      </label>
+    </div>
+
+    <label id="singleLabel">Tracking number</label>
+    <input id="singleInput" placeholder="e.g. 1Z999AA10123456784" />
 
     <label>Carrier (optional)</label>
     <select id="carrierSelect">
@@ -150,20 +200,20 @@
       <option value="ACS">ACS</option>
     </select>
 
-    <div class="helper">
+    <div class="helper" id="singleHelper">
       Leave empty if unsure — auto-detection works well.
     </div>
 
     <hr />
 
-    <!-- BATCH TRACKING -->
+    <!-- BATCH -->
     <label>Batch upload (CSV or Excel)</label>
     <input id="batchFile" type="file" accept=".csv,.xlsx" />
-   
+
     <label>Export format</label>
     <select id="exportFormat">
-      <option value="csv">CSV</option>
       <option value="xlsx">Excel (XLSX)</option>
+      <option value="csv">CSV</option>
     </select>
 
     <button id="trackBtn">Track shipments</button>
@@ -186,17 +236,23 @@
     </div>
 
   </div>
+
+  <footer>
+    powered by <span class="brand">transportal</span>
+  </footer>
 </div>
 
 <script>
 const trackBtn = document.getElementById('trackBtn');
-const trackingInput = document.getElementById('trackingInput');
+const singleInput = document.getElementById('singleInput');
+const singleLabel = document.getElementById('singleLabel');
+const singleHelper = document.getElementById('singleHelper');
 const carrierSelect = document.getElementById('carrierSelect');
 const batchFileInput = document.getElementById('batchFile');
 const exportFormatSelect = document.getElementById('exportFormat');
+const modeRadios = document.querySelectorAll('input[name="singleMode"]');
 
 const errorEl = document.getElementById('error');
-
 const resultSingle = document.getElementById('resultSingle');
 const statusEl = document.getElementById('status');
 const courierEl = document.getElementById('courier');
@@ -206,14 +262,31 @@ const resultBatch = document.getElementById('resultBatch');
 const batchSummary = document.getElementById('batchSummary');
 const downloadBtn = document.getElementById('downloadBtn');
 
+let singleMode = 'tracking';
+
+modeRadios.forEach(radio => {
+  radio.addEventListener('change', e => {
+    singleMode = e.target.value;
+    singleLabel.textContent =
+      singleMode === 'tracking' ? 'Tracking number' : 'Reference';
+    singleInput.placeholder =
+      singleMode === 'tracking'
+        ? 'e.g. 1Z999AA10123456784'
+        : 'e.g. ORDER-12345';
+    singleHelper.textContent =
+      singleMode === 'tracking'
+        ? 'Leave empty if unsure — auto-detection works well.'
+        : 'Search by shipment or order reference.';
+  });
+});
+
 trackBtn.addEventListener('click', async () => {
-  const tracking = trackingInput.value.trim();
+  const value = singleInput.value.trim();
   const carrier = carrierSelect.value;
   const file = batchFileInput.files[0];
   const exportFormat = exportFormatSelect.value;
 
   errorEl.style.display = 'none';
-  errorEl.textContent = '';
   resultSingle.style.display = 'none';
   resultBatch.style.display = 'none';
   eventsEl.innerHTML = '';
@@ -223,115 +296,82 @@ trackBtn.addEventListener('click', async () => {
   trackBtn.textContent = 'Processing…';
 
   try {
-
-    // -------------------
-    // BATCH MODE
-    // -------------------
     if (file) {
       const formData = new FormData();
       formData.append('file', file);
       formData.append('export_format', exportFormat);
 
-      const response = await fetch(
-        'https://api.transportal.gr/webhook/track-batch',
-        {
-          method: 'POST',
-          body: formData,
-        }
-      );
+      const res = await fetch('https://api.transportal.gr/webhook/track-batch', {
+        method: 'POST',
+        body: formData,
+      });
 
-      if (!response.ok) {
-        throw new Error(`HTTP ${response.status}`);
-      }
+      if (!res.ok) throw new Error(`HTTP ${res.status}`);
 
-      const blob = await response.blob();
-      const downloadUrl = window.URL.createObjectURL(blob);
+      const blob = await res.blob();
+      const url = URL.createObjectURL(blob);
 
       downloadBtn.onclick = () => {
         const a = document.createElement('a');
-        a.href = downloadUrl;
+        a.href = url;
         a.download =
           exportFormat === 'xlsx'
             ? 'tracking-results.xlsx'
             : 'tracking-results.csv';
-
         document.body.appendChild(a);
         a.click();
         a.remove();
-        window.URL.revokeObjectURL(downloadUrl);
+        URL.revokeObjectURL(url);
       };
 
       batchSummary.textContent = 'Batch processed successfully.';
       downloadBtn.style.display = 'block';
       resultBatch.style.display = 'block';
+      return;
     }
 
-    // -------------------
-    // SINGLE MODE
-    // -------------------
-    else {
-      if (!tracking) {
-        throw new Error('Please enter a tracking number or upload a file.');
-      }
+    if (!value) throw new Error('Please enter a tracking number or reference.');
 
-      const response = await fetch(
-        'https://api.transportal.gr/webhook/track-mvp',
-        {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ tracking, carrier }),
-        }
-      );
+    const payload =
+      singleMode === 'tracking'
+        ? { tracking: value, carrier }
+        : { reference: value, carrier };
 
-      if (!response.ok) {
-        throw new Error(`HTTP ${response.status}`);
-      }
+    const res = await fetch('https://api.transportal.gr/webhook/track-mvp', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify(payload),
+    });
 
-      let data = await response.json();
-      if (Array.isArray(data)) data = data[0];
+    if (!res.ok) throw new Error(`HTTP ${res.status}`);
 
-      if (typeof data.error === 'string' && data.error.length > 0) {
-        errorEl.textContent = data.error;
-        errorEl.style.display = 'block';
-      }
+    let data = await res.json();
+    if (Array.isArray(data)) data = data[0];
 
-      statusEl.textContent = `Status: ${data.status || 'Unknown'}`;
-      courierEl.textContent =
-        `Carrier: ${
-          data.carrier && data.carrier !== 'UNKNOWN'
-            ? data.carrier
-            : 'Not detected yet'
-        }`;
+    statusEl.textContent = `Status: ${data.status || 'Unknown'}`;
+    courierEl.textContent =
+      `Carrier: ${data.carrier && data.carrier !== 'UNKNOWN'
+        ? data.carrier
+        : 'Not detected yet'}`;
 
-      if (Array.isArray(data.events) && data.events.length > 0) {
-        data.events.forEach(e => {
-          const div = document.createElement('div');
-          div.className = 'event';
-          div.innerHTML = `
-            <div><strong>${e.status || 'Update'}</strong></div>
-            <div class="muted">
-              ${e.datetime ? new Date(e.datetime).toLocaleString() : ''}
-              ${e.location ? ' • ' + e.location : ''}
-            </div>
-            ${e.description ? `<div class="muted">${e.description}</div>` : ''}
-          `;
-          eventsEl.appendChild(div);
-        });
-      } else {
-        eventsEl.innerHTML = `
-          <div class="muted">
-            No tracking events available yet.<br />
-            Updates usually appear after the first courier scan.
-          </div>`;
-      }
-
-      resultSingle.style.display = 'block';
+    if (Array.isArray(data.events) && data.events.length) {
+      data.events.forEach(e => {
+        const div = document.createElement('div');
+        div.className = 'event';
+        div.innerHTML = `
+          <div><strong>${e.status}</strong></div>
+          <div class="muted">${new Date(e.datetime).toLocaleString()}${e.location ? ' • ' + e.location : ''}</div>
+        `;
+        eventsEl.appendChild(div);
+      });
+    } else {
+      eventsEl.innerHTML = '<div class="muted">No tracking events yet.</div>';
     }
+
+    resultSingle.style.display = 'block';
 
   } catch (err) {
-    console.error(err);
-    errorEl.textContent =
-      err.message || 'Unable to process your request.';
+    errorEl.textContent = err.message || 'Something went wrong.';
     errorEl.style.display = 'block';
   } finally {
     trackBtn.disabled = false;
